{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 180,
  "lineage": "96920195-04ca-44c9-c5d9-ccccd17690d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ninja_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e037954b44d303e",
            "domain": "vpc",
            "id": "eipalloc-02e037954b44d303e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-197-87-248.compute-1.amazonaws.com",
            "public_ip": "34.197.87.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastianServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:950381580793:instance/i-08707f2f355334804",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08707f2f355334804",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "N_virgina",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1eddb6c3b0f429d",
            "private_dns": "ip-10-0-0-166.ec2.internal",
            "private_ip": "10.0.0.166",
            "public_dns": "ec2-44-202-40-240.compute-1.amazonaws.com",
            "public_ip": "44.202.40.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0500fa55daa640e22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcb191d0d7d6efcb",
            "tags": {
              "Name": "Bastian"
            },
            "tags_all": {
              "Name": "Bastian"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02a2192b1e43e1d93"
            ]
          },
          "dependencies": [
            "aws_security_group.Bastian",
            "aws_subnet.public_subnet",
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "OSSEC-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:950381580793:instance/i-0618a41bec07b0619",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0618a41bec07b0619",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "N_virgina",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc518f7cdd35d9ba",
            "private_dns": "ip-10-0-2-70.ec2.internal",
            "private_ip": "10.0.2.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a986714756ee8fc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff8b73d31d5cc0b9",
            "tags": {
              "Name": "OSSEC"
            },
            "tags_all": {
              "Name": "OSSEC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07bd242632ba7dc1a"
            ]
          },
          "dependencies": [
            "aws_instance.BastianServer",
            "aws_security_group.Bastian",
            "aws_security_group.OSSEC",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ninjaigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:internet-gateway/igw-03b31daf514a321ba",
            "id": "igw-03b31daf514a321ba",
            "owner_id": "950381580793",
            "tags": {
              "Name": "ninja-igw-01"
            },
            "tags_all": {
              "Name": "ninja-igw-01"
            },
            "vpc_id": "vpc-095a3c6691d390b1f"
          },
          "dependencies": [
            "aws_vpc.ninjavpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ninja_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e037954b44d303e",
            "connectivity_type": "public",
            "id": "nat-067241bcc18c804c6",
            "network_interface_id": "eni-093ae80d4935606a2",
            "private_ip": "10.0.0.214",
            "public_ip": "34.197.87.248",
            "subnet_id": "subnet-0fcb191d0d7d6efcb"
          },
          "dependencies": [
            "aws_eip.ninja_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:route-table/rtb-037315d1cd7a74e72",
            "id": "rtb-037315d1cd7a74e72",
            "owner_id": "950381580793",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-067241bcc18c804c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ninja-route-pri-01"
            },
            "tags_all": {
              "Name": "ninja-route-pri-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-095a3c6691d390b1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ninja_eip",
            "aws_nat_gateway.ninja_natgateway",
            "aws_subnet.public_subnet",
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:route-table/rtb-09d3ab42a83a925db",
            "id": "rtb-09d3ab42a83a925db",
            "owner_id": "950381580793",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b31daf514a321ba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ninja-route-pub-01"
            },
            "tags_all": {
              "Name": "ninja-route-pub-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-095a3c6691d390b1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ninjaigw",
            "aws_vpc.ninjavpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ninja-private-asspciation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0063d6eba697063f7",
            "route_table_id": "rtb-037315d1cd7a74e72",
            "subnet_id": "subnet-0ff8b73d31d5cc0b9"
          },
          "dependencies": [
            "aws_eip.ninja_eip",
            "aws_nat_gateway.ninja_natgateway",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aad861279f4221f6",
            "route_table_id": "rtb-037315d1cd7a74e72",
            "subnet_id": "subnet-0eeca2af1195fbd38"
          },
          "dependencies": [
            "aws_eip.ninja_eip",
            "aws_nat_gateway.ninja_natgateway",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ninja-public-asspciation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f5085315bee7185",
            "route_table_id": "rtb-09d3ab42a83a925db",
            "subnet_id": "subnet-0fcb191d0d7d6efcb"
          },
          "dependencies": [
            "aws_internet_gateway.ninjaigw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef0df4e2097bcef7",
            "route_table_id": "rtb-09d3ab42a83a925db",
            "subnet_id": "subnet-010dcfb5e98accd08"
          },
          "dependencies": [
            "aws_internet_gateway.ninjaigw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastian",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:security-group/sg-02a2192b1e43e1d93",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-02a2192b1e43e1d93",
            "ingress": [
              {
                "cidr_blocks": [
                  "180.94.33.242/32"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "950381580793",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095a3c6691d390b1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ninjavpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "OSSEC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:security-group/sg-07bd242632ba7dc1a",
            "description": "Allow SSH from Bastian",
            "egress": [],
            "id": "sg-07bd242632ba7dc1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.166/32"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "OSSEC",
            "name_prefix": "",
            "owner_id": "950381580793",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095a3c6691d390b1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.BastianServer",
            "aws_security_group.Bastian",
            "aws_subnet.public_subnet",
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:subnet/subnet-0ff8b73d31d5cc0b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff8b73d31d5cc0b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950381580793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-subnet-2"
            },
            "tags_all": {
              "Name": "pvt-subnet-2"
            },
            "vpc_id": "vpc-095a3c6691d390b1f"
          },
          "dependencies": [
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:subnet/subnet-0eeca2af1195fbd38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeca2af1195fbd38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950381580793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-subnet-3"
            },
            "tags_all": {
              "Name": "pvt-subnet-3"
            },
            "vpc_id": "vpc-095a3c6691d390b1f"
          },
          "dependencies": [
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:subnet/subnet-0fcb191d0d7d6efcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcb191d0d7d6efcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950381580793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-0"
            },
            "tags_all": {
              "Name": "pub-subnet-0"
            },
            "vpc_id": "vpc-095a3c6691d390b1f"
          },
          "dependencies": [
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:subnet/subnet-010dcfb5e98accd08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010dcfb5e98accd08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950381580793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-1"
            },
            "tags_all": {
              "Name": "pub-subnet-1"
            },
            "vpc_id": "vpc-095a3c6691d390b1f"
          },
          "dependencies": [
            "aws_vpc.ninjavpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ninjavpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950381580793:vpc/vpc-095a3c6691d390b1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c47ecea769e1338",
            "default_route_table_id": "rtb-05b3495fdb3c2db7b",
            "default_security_group_id": "sg-0c47c5627b20aee1b",
            "dhcp_options_id": "dopt-0bdcdd4cad37b0443",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-095a3c6691d390b1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b3495fdb3c2db7b",
            "owner_id": "950381580793",
            "tags": {
              "Name": "ninja-vpc-01"
            },
            "tags_all": {
              "Name": "ninja-vpc-01"
            }
          }
        }
      ]
    }
  ]
}